i deleted the image from the github

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   
   <title>Päätyö | Portfolio</title>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="/PortfolioUpload/style.css">
 </head>
 <body>
   <div class="container">  <!-- Wrap everything inside this container -->
@@ -22,7 +22,7 @@
     <p>Welcome to my corner of coding!<span style="font-size: 1.5rem;">👋</span></p>
     <p>The best time to plant a tree was 20 years ago. The second best time is now!</p>
   </div>
-  <img src="/HTML-KURSSI/05_viikko/Portfolio-sivu/images/cv image.jpeg" alt="Bita Yeganeh" class="profile-photo" />
+  <img src="/HTML_School/HTML-KURSSI/05_viikko/Portfolio-sivu/images/cv image.jpeg" alt="Bita Yeganeh" class="profile-photo" />
   </div>
 
     
