light/dark mode created

--- a/in.html
+++ b/in.html
@@ -14,10 +14,11 @@
 <header class="main-header" id="mainHeader">
   <div class="logo">Bita Yeganeh</div>
   <nav class="nav-links">
-    <a href="#about">About Me</a>
+    <a href="#about">About</a>
     <a href="#skills">Skills</a>
-    <a href="#contact">Contact Me</a>
+    <a href="#contact">Contact</a>
   </nav>
+   <button id="modeToggle" class="mode-toggle">🌙</button>
 </header>
 
 
@@ -49,6 +50,8 @@
           Next, I’m looking forward to diving into <strong>React</strong>, strengthening my skills with Git, and becoming more confident with version control and modern development workflows. My ultimate goal is to become a well-rounded <u>front-end developer</u> who builds websites that are not only technically sound but also meaningful and inclusive.
         </p>
   </section>
-    
+
+    <button id="backToTop" title="Go to top">Top⬆️</button>
 </body>
+<script src="scr.js"></script>
 </html>
