--- a/in.html
+++ b/in.html
@@ -52,6 +52,21 @@
   </section>
 
     <button id="backToTop" title="Go to top">Top⬆️</button>
+
+    <section id="projects" class="projects-section">
+  <h2>Projects</h2>
+  <div class="projects-grid">
+    <div class="project-item"><img src="images/project1.png" alt="Project 1"></div>
+    <!-- This image spans 2 columns (takes image 2 & 3 space) -->
+    <div class="project-item span-2"><img src="images/project2.png" alt="Project 2"></div>
+    <div class="project-item"><img src="images/project4.jpg" alt="Project 4"></div>
+    <!-- This image spans 2 columns (takes image 5 & 6 space) -->
+    <div class="project-item span-2"><img src="images/project4.png" alt="Project 2"></div>
+    <div class="project-item"><img src="images/project7.jpg" alt="Project 7"></div>
+    <div class="project-item"><img src="images/project8.jpg" alt="Project 8"></div>
+    <div class="project-item"><img src="images/project9.jpg" alt="Project 9"></div>
+  </div>
+</section>
 </body>
 <script src="scr.js"></script>
 </html>
