some styles are added

--- a/in.html
+++ b/in.html
@@ -22,6 +22,7 @@
 </header>
 
 
+
     <section class="hero">
         <div class="hero-content">
             <h1>Welcome to my Portfolio</h1>
@@ -67,6 +68,31 @@
     <div class="project-item"><img src="images/project9.jpg" alt="Project 9"></div>
   </div>
 </section>
+
+<!--- FORM -->>
+<section id="contact" class="contact-section">
+  <h2>Contact Me</h2>
+  <div class="form-wrapper">
+    <form class="contact-form" action="#" method="post">
+      <label for="name">Name:</label>
+      <input type="text" id="name" name="name" required>
+
+      <label for="email">Email:</label>
+      <input type="email" id="email" name="email" required>
+
+      <label for="phone">Phone:</label>
+      <input type="tel" id="phone" name="phone">
+
+      <label for="message">Message:</label>
+      <textarea id="message" name="message" rows="5" required></textarea>
+
+      <button type="submit" class="submit-button">Send</button>
+    </form>
+  </div>
+</section>
+
+
+
 </body>
 <script src="scr.js"></script>
 </html>
