some css is added

--- a/in.html
+++ b/in.html
@@ -33,6 +33,9 @@
      <!-- Example Next Section -->
   <section id="about">
     <h2>About Me</h2>
+    <div class="about-container">
+    <img src="images/cv image.jpeg" alt="Bita Yeganeh Profile Photo" class="profile-image">
+    <div class="about-text">
     <p>
           I'm a passionate web development student at <span class="bold-text">Business College Helsinki</span>, where I’m diving deep into the fundamentals of modern front-end development.</p>
         
