--- a/in.html
+++ b/in.html
@@ -15,7 +15,7 @@
   <div class="logo">Bita Yeganeh</div>
   <nav class="nav-links">
     <a href="#about">About</a>
-    <a href="#skills">Skills</a>
+    <a href="#" id="skillsLink">Skills</a>
     <a href="#contact">Contact</a>
   </nav>
    <button id="modeToggle" class="mode-toggle">🌙</button>
@@ -45,26 +45,58 @@
     <p>My current focus is on mastering HTML, CSS, and JavaScript. Collaboration is at the heart of how I grow. I enjoy working in teams, bouncing around ideas, and learning from feedback and <strong>learning by donig.</strong>.</p>
     <p>Beyond the technical side, I’m passionate about <strong>problem-solving</strong> and learning through hands-on projects. I believe the best way to grow is by building real things. Every new project is an opportunity to explore, make mistakes, and improve.</p>
     <p>I enjoy working in teams, sharing ideas, and gaining feedback from peers and mentors. I value clear communication, curiosity, and staying open to new tools and ways of thinking.</p>
-    <p>Next, I’m looking forward to diving into <strong>React</strong>, strengthening my skills with Git, and becoming more confident with version control and modern development workflows. My ultimate goal is to become a well-rounded <u>front-end developer</u> who builds websites that are not only technically sound but also meaningful and inclusive.</p>
+    <p>Next, I’m looking forward to diving into <strong>React</strong>, strengthening my skills with Git, and becoming more confident with version control and modern development workflows.</p> 
     </div>
     </div>
   
   </section>
+ 
+
+<!-- Modal -->
+<div id="skillsModal" class="modal">
+  <div class="modal-content">
+    <span class="close-btn">&times;</span>
+    <h2>My Skills</h2>
+    <ul class="skills-list">
+      <li>HTML5</li>
+      <li>CSS</li>
+      <li>JavaScript</li>
+      <li>Git & GitHub</li>
+      <li>WordPress, PHP & React(soon)</li>
+    </ul>
+  </div>
+</div>
+
 
     <button id="backToTop" title="Go to top">Top⬆️</button>
+
 
     <section id="projects" class="projects-section">
   <h2>Projects</h2>
   <div class="projects-grid">
-    <div class="project-item"><img src="images/project1.png" alt="Project 1"></div>
+    <div class="project-item">
+      <a href="https://github.com/BitaYeganeh/HTML_School/tree/main/JS/07-viikko/Eläintarha" target="_blank">
+      <img src="images/project1.png" alt="Project 1"></div>
     <!-- This image spans 2 columns (takes image 2 & 3 space) -->
-    <div class="project-item span-2"><img src="images/project2.png" alt="Project 2"></div>
-    <div class="project-item"><img src="images/project4.jpg" alt="Project 4"></div>
+    <div class="project-item span-2">
+      <a href="https://github.com/BitaYeganeh/HTML_School/tree/main/JS/09-viikko/09_viikko/Pannukakku%203" target="_blank">
+      <img src="images/project2.png" alt="Project 2"></div>
+    <div class="project-item">
+      <a href="" target="_blank"></a>
+      <img src="images/project4.jpg" alt="Project 4"></div>
     <!-- This image spans 2 columns (takes image 5 & 6 space) -->
-    <div class="project-item span-2"><img src="images/project4.png" alt="Project 2"></div>
-    <div class="project-item"><img src="images/project7.jpg" alt="Project 7"></div>
-    <div class="project-item"><img src="images/project8.jpg" alt="Project 8"></div>
-    <div class="project-item"><img src="images/project9.jpg" alt="Project 9"></div>
+    <div class="project-item span-2">
+      <a href="" target="_blank"></a>
+      <img src="images/project4.png" alt="Project 2"></div>
+    <div class="project-item">
+      <a href="" target="_blank"></a>
+      <img src="images/project7.jpg" alt="Project 7"></div>
+    <div class="project-item">
+      <a href="" target="_blank"></a>
+      <img src="images/project8.jpg" alt="Project 8"></div>
+    <div class="project-item">
+      <a href="" target="_blank"></a>
+      <img src="images/project9.jpg" alt="Project 9"></div>
   </div>
 </section>
 
