portfolio style added

--- a/in.html
+++ b/in.html
@@ -13,10 +13,14 @@
 
 <header class="main-header" id="mainHeader">
   <div class="logo">Bita Yeganeh</div>
+  <!-- header -->
   <nav class="nav-links">
     <a href="#about">About</a>
     <a href="#" id="skillsLink">Skills</a>
-    <a href="#contact">Contact</a>
+    <a href="#education">Education</a>
+    <a href="#Working Experience">Working Experience</a>
+    <a href="#contact">Contact Me</a>
+
   </nav>
    <button id="modeToggle" class="mode-toggle">🌙</button>
 </header>
@@ -99,6 +103,24 @@
       <img src="images/project9.jpg" alt="Project 9"></div>
   </div>
 </section>
+
+<!--- Education -->
+      <section id="education">
+        <h3>Education</h3>
+        <div class="education-item">
+          <p>- Electronic Engineering - 2009, Iran</p>
+          <p>- Web Developer 2025 - Business College Helsinki (with a focus on WordPress, PHP, and React)</p>
+        </div>
+      </section>
+
+
+
+
+
+
+
+
+
 
 <!--- FORM -->
 <section id="contact" class="contact-section">
