--- a/index.html
+++ b/index.html
@@ -75,34 +75,67 @@
     <button id="backToTop" title="Go to top">Top ⬆️</button>
 
 
-    <section id="projects" class="projects-section">
+<section id="projects" class="projects-section">
   <h2>Projects</h2>
   <div class="projects-grid">
+    
     <div class="project-item">
       <a href="https://github.com/BitaYeganeh/HTML_School/tree/main/JS/07-viikko/Eläintarha" target="_blank">
-      <img src="images/project1.png" alt="Project 1"></div>
-    <!-- This image spans 2 columns (takes image 2 & 3 space) -->
+        <img src="images/project1.png" alt="Project 1">
+      </a>
+    </div>
+
     <div class="project-item">
-      <a href="https://github.com/BitaYeganeh/HTML_School/tree/main/JS/09-viikko/09_viikko/Pannukakku%203" target="_blank">
-      <img src="images/project2.png" alt="Project 2"></div>
+      <a href="https://github.com/BitaYeganeh/Summer-tasks/tree/main/Pannukakku" target="_blank">
+        <img src="images/project2.png" alt="Project 2">
+      </a>
+    </div>
+
     <div class="project-item">
-      <a href="" target="_blank"></a>
-      <img src="images/project3.png" alt="Project 3"></div>
-    <!-- This image spans 2 columns (takes image 5 & 6 space) -->
-    <div class="project-item span-2">
-      <a href="" target="_blank"></a>
-      <img src="images/project4.png" alt="Project 4"></div>
+      <a href="https://github.com/BitaYeganeh/Summer-tasks/tree/main/Pannukakku" target="_blank">
+        <img src="images/project3.png" alt="Project 3">
+      </a>
+    </div>
+
     <div class="project-item">
-      <a href="" target="_blank"></a>
-      <img src="images/project6.png" alt="Project 6"></div>
+      <a href="https://github.com/BitaYeganeh/HTML_School/tree/main/HTML-KURSSI/06-viikko/01_flex-projekti" target="_blank">
+        <img src="images/project4.png" alt="Project 4">
+      </a>
+    </div>
+
     <div class="project-item">
-      <a href="" target="_blank"></a>
-      <img src="images/project7.png" alt="Project 7"></div>
+      <a href="https://github.com/BitaYeganeh/HTML_School/tree/main/HTML-KURSSI/06-viikko/01_flex-projekti" target="_blank">
+        <img src="images/project5.png" alt="Project 5">
+      </a>
+    </div>
+
     <div class="project-item">
-      <a href="" target="_blank"></a>
-      <img src="images/project8.jpg" alt="Project 8"></div>
+      <a href="https://github.com/BitaYeganeh/HTML_School/tree/main/HTML-KURSSI/06-viikko/01_flex-projekti" target="_blank">
+        <img src="images/project6.png" alt="Project 6">
+      </a>
+    </div>
+
+    <div class="project-item">
+      <a href="#" target="_blank">
+        <img src="images/project7.png" alt="Project 7">
+      </a>
+    </div>
+
+    <div class="project-item">
+      <a href="#" target="_blank">
+        <img src="images/project8.png" alt="Project 8">
+      </a>
+    </div>
+
+    <div class="project-item">
+      <a href="#" target="_blank">
+        <img src="images/project9.png" alt="Project 9">
+      </a>
+    </div>
+
   </div>
 </section>
+
 
 <!--- Education -->
       <section id="education">
