--- a/index.html
+++ b/index.html
@@ -18,7 +18,6 @@
     <a href="#about">About</a>
     <a href="#" id="skillsLink">Skills</a>
     <a href="#education">Education</a>
-    <a href="#Working Experience">Working Experience</a>
     <a href="#contact">Contact Me</a>
 
   </nav>
@@ -122,7 +121,7 @@
     </div>
 
     <div class="project-item">
-      <a href="#" target="_blank">
+      <a href="https://github.com/BitaYeganeh/Summer-tasks/tree/main/FrontendMentor/base-apparel-coming-soon-master" target="_blank">
         <img src="images/project8.png" alt="Project 8">
       </a>
     </div>
