--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
       <section id="education">
         <h3>Education</h3>
         <div class="education-item">
-          <p>- Electronic Engineering - 2009, Iran</p><br>
+          <p>- Electronic Engineering - 2009, Iran</p>
           <p>- Web Developer Training Program (March 2025 – Present) – Business College Helsinki</p>
           <p>(Focus: WordPress, PHP, and React)</p>
         </div>
@@ -181,7 +181,9 @@
   </div>
 </section>
 
-
+<footer class="footer">
+  <p>© 2025 Bita Yeganeh</p>
+</footer>
 
 </body>
 <script src="script.js"></script>
