--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
     <a href="#" id="skillsLink">Skills</a>
     <a href="#education">Education</a>
     <a href="#contact">Contact Me</a>
+    <a href="#projects">Projects</a>
 
   </nav>
    <button id="modeToggle" class="mode-toggle">🌙</button>
@@ -144,15 +145,6 @@
           <p>(Focus: WordPress, PHP, and React)</p>
         </div>
       </section>
-
-
-
-
-
-
-
-
-
 
 <!--- FORM -->
 <section id="contact" class="contact-section">
