hamburger menu added to mobile view

--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
 <header class="main-header" id="mainHeader">
   <div class="logo">Bita Yeganeh</div>
   
+  <button class="menu-toggle" aria-label="Toggle navigation">☰</button>
+
+
   <nav class="nav-links">
     <a href="#about">About Me</a>
     <a href="#" id="skillsLink">Skills</a>
